[package]
name = "rlox"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.24"
strum_macros = "0.24"
substring = "1.4.5"
lazy_static = "1.4.0"
colored = "2.0.0"
dialoguer = {version = "0.10.1", features = ["history"]}